Haskell/Alex/Parser.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from ./Alex/Parser.y
-----------------------------------------------------------------------------


terminal EOF is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_parse -> definitions                        (0)
	ixs -> '[' e ']'                                   (1)
	ixs -> ixs '[' e ']'                               (2)
	lvaluable -> identifier ixs                        (3)
	lvaluable -> identifier '.' lvaluable              (4)
	lvaluable -> identifier                            (5)
	args -> e                                          (6)
	args -> args ',' e                                 (7)
	args ->                                            (8)
	records -> identifier ':' T mRecords               (9)
	mRecords ->                                        (10)
	mRecords -> ',' records                            (11)
	T0 -> atom                                         (12)
	T0 -> bool                                         (13)
	T0 -> int                                          (14)
	T0 -> float                                        (15)
	T0 -> char                                         (16)
	T0 -> string                                       (17)
	T0 -> unit                                         (18)
	T0 -> void                                         (19)
	T0 -> vector '<' T '>'                             (20)
	T0 -> identifier                                   (21)
	T0 -> '{' records '}'                              (22)
	T -> T0                                            (23)
	T -> T '|' T0                                      (24)
	loop_a0 -> break                                   (25)
	loop_a0 -> continue                                (26)
	loop_a0 -> a0                                      (27)
	loop_a -> loop_a ';' loop_a0                       (28)
	loop_a -> loop_a0                                  (29)
	loop_as -> loop_a ';'                              (30)
	pattern -> number                                  (31)
	pattern -> charlit                                 (32)
	pattern -> stringlit                               (33)
	pattern -> boollit                                 (34)
	pattern -> identifier optionalByRef                (35)
	pattern -> '{' records '}'                         (36)
	patterns -> pattern '=>' '{' actions '}'           (37)
	patterns -> patterns pattern '=>' '{' actions '}'   (38)
	a0 -> e                                            (39)
	a0 -> for '(' pattern ':' e ')' '{' loop_as '}'    (40)
	a0 -> while '(' e ')' '{' loop_as '}'              (41)
	a0 -> lvaluable ':=' e                             (42)
	a0 -> T identifier ':=' e                          (43)
	a0 -> T identifier                                 (44)
	a0 -> return e                                     (45)
	a0 -> return unit                                  (46)
	as -> as ';' a0                                    (47)
	as -> a0                                           (48)
	actions -> as ';'                                  (49)
	actions ->                                         (50)
	optionalByRef -> by reference                      (51)
	optionalByRef ->                                   (52)
	e -> lvaluable                                     (53)
	e -> new T '(' args ')'                            (54)
	e -> '&' e                                         (55)
	e -> '-' e                                         (56)
	e -> e '+' e                                       (57)
	e -> e '*' e                                       (58)
	e -> e '/' e                                       (59)
	e -> e '^' e                                       (60)
	e -> e '%' e                                       (61)
	e -> e '-' e                                       (62)
	e -> e '<' e                                       (63)
	e -> e '>' e                                       (64)
	e -> e '!=' e                                      (65)
	e -> e '==' e                                      (66)
	e -> e '>=' e                                      (67)
	e -> e '<=' e                                      (68)
	e -> e '||' e                                      (69)
	e -> e '&&' e                                      (70)
	e -> '~' e                                         (71)
	e -> '(' e ')'                                     (72)
	e -> '[' args ']'                                  (73)
	e -> number                                        (74)
	e -> stringlit                                     (75)
	e -> charlit                                       (76)
	e -> boollit                                       (77)
	e -> match e with patterns                         (78)
	e -> identifier '(' args ')'                       (79)
	fun_params -> fun_params ',' fun_params            (80)
	fun_params -> T identifier optionalByRef           (81)
	m_fun_params -> fun_params                         (82)
	m_fun_params ->                                    (83)
	definition -> T identifier '(' m_fun_params ')' '{' actions '}'   (84)
	definition -> type identifier ':=' T               (85)
	definitions -> definitions definition              (86)
	definitions -> definition                          (87)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	charlit        { LCharLit _ _ }
	stringlit      { LStringLit _ _ }
	boollit        { LBoolLit _ _ }
	number         { LNumber _ _ }
	atom           { LAtom _ _ }
	bool           { LBool _ }
	int            { LInt _ }
	float          { LFloat _ }
	char           { LChar _ }
	string         { LString _ }
	unit           { LUnit _ }
	void           { LVoid _ }
	vector         { LVector _ }
	'['            { LOBckt _ }
	']'            { LCBckt _ }
	'{'            { LOBrc _ }
	'}'            { LCBrc _ }
	'('            { LOParen _ }
	')'            { LCParen _ }
	','            { LComma _ }
	':'            { LColon _ }
	'=>'           { LFatArrow _ }
	':='           { LAssign _ }
	match          { LMatch _ }
	with           { LWith _ }
	type           { LType _ }
	';'            { LSemiColon _ }
	for            { LFor _ }
	while          { LWhile _ }
	continue       { LContinue _ }
	break          { LBreak _ }
	new            { LNew _ }
	by             { LBy _ }
	reference      { LReference _ }
	'|'            { LVBar _ }
	identifier     { LIdentifier _ _ }
	'.'            { LDot _ }
	EOF            { LEOF }
	'+'            { LPlus _ }
	'-'            { LMinus _ }
	'*'            { LMult _ }
	'/'            { LDiv _ }
	'^'            { LPow _ }
	'%'            { LMod _ }
	'<'            { LLT _ }
	'>'            { LGT _ }
	'!='           { LNEq _ }
	'=='           { LEq _ }
	'>='           { LGTE _ }
	'<='           { LLTE _ }
	'||'           { LOr _ }
	'&&'           { LAnd _ }
	'~'            { LNot  _ }
	'&'            { LRef _ }
	return         { LReturn _ }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_parse    rule  0
	ixs             rules 1, 2
	lvaluable       rules 3, 4, 5
	args            rules 6, 7, 8
	records         rule  9
	mRecords        rules 10, 11
	T0              rules 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22
	T               rules 23, 24
	loop_a0         rules 25, 26, 27
	loop_a          rules 28, 29
	loop_as         rule  30
	pattern         rules 31, 32, 33, 34, 35, 36
	patterns        rules 37, 38
	a0              rules 39, 40, 41, 42, 43, 44, 45, 46
	as              rules 47, 48
	actions         rules 49, 50
	optionalByRef   rules 51, 52
	e               rules 53, 54, 55, 56, 57, 58, 59, 60, 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79
	fun_params      rules 80, 81
	m_fun_params    rules 82, 83
	definition      rules 84, 85
	definitions     rules 86, 87

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_parse -> . definitions                       (rule 0)

	atom           shift, and enter state 7
	bool           shift, and enter state 8
	int            shift, and enter state 9
	float          shift, and enter state 10
	char           shift, and enter state 11
	string         shift, and enter state 12
	unit           shift, and enter state 13
	void           shift, and enter state 14
	vector         shift, and enter state 15
	'{'            shift, and enter state 16
	type           shift, and enter state 17
	identifier     shift, and enter state 18

	T0             goto state 3
	T              goto state 4
	definition     goto state 5
	definitions    goto state 6

State 1

	ixs -> . '[' e ']'                                  (rule 1)

	'['            shift, and enter state 2


State 2

	ixs -> '[' . e ']'                                  (rule 1)

	charlit        shift, and enter state 28
	stringlit      shift, and enter state 29
	boollit        shift, and enter state 30
	number         shift, and enter state 31
	'['            shift, and enter state 32
	'('            shift, and enter state 33
	match          shift, and enter state 34
	new            shift, and enter state 35
	identifier     shift, and enter state 36
	'-'            shift, and enter state 37
	'~'            shift, and enter state 38
	'&'            shift, and enter state 39

	lvaluable      goto state 26
	e              goto state 27

State 3

	T -> T0 .                                           (rule 23)

	atom           reduce using rule 23
	bool           reduce using rule 23
	int            reduce using rule 23
	float          reduce using rule 23
	char           reduce using rule 23
	string         reduce using rule 23
	unit           reduce using rule 23
	void           reduce using rule 23
	vector         reduce using rule 23
	'{'            reduce using rule 23
	'}'            reduce using rule 23
	'('            reduce using rule 23
	','            reduce using rule 23
	type           reduce using rule 23
	'|'            reduce using rule 23
	identifier     reduce using rule 23
	'>'            reduce using rule 23
	%eof           reduce using rule 23


State 4

	T -> T . '|' T0                                     (rule 24)
	definition -> T . identifier '(' m_fun_params ')' '{' actions '}'    (rule 84)

	'|'            shift, and enter state 24
	identifier     shift, and enter state 25


State 5

	definitions -> definition .                         (rule 87)

	atom           reduce using rule 87
	bool           reduce using rule 87
	int            reduce using rule 87
	float          reduce using rule 87
	char           reduce using rule 87
	string         reduce using rule 87
	unit           reduce using rule 87
	void           reduce using rule 87
	vector         reduce using rule 87
	'{'            reduce using rule 87
	type           reduce using rule 87
	identifier     reduce using rule 87
	%eof           reduce using rule 87


State 6

	%start_parse -> definitions .                       (rule 0)
	definitions -> definitions . definition             (rule 86)

	atom           shift, and enter state 7
	bool           shift, and enter state 8
	int            shift, and enter state 9
	float          shift, and enter state 10
	char           shift, and enter state 11
	string         shift, and enter state 12
	unit           shift, and enter state 13
	void           shift, and enter state 14
	vector         shift, and enter state 15
	'{'            shift, and enter state 16
	type           shift, and enter state 17
	identifier     shift, and enter state 18
	%eof           accept

	T0             goto state 3
	T              goto state 4
	definition     goto state 23

State 7

	T0 -> atom .                                        (rule 12)

	atom           reduce using rule 12
	bool           reduce using rule 12
	int            reduce using rule 12
	float          reduce using rule 12
	char           reduce using rule 12
	string         reduce using rule 12
	unit           reduce using rule 12
	void           reduce using rule 12
	vector         reduce using rule 12
	'{'            reduce using rule 12
	'}'            reduce using rule 12
	'('            reduce using rule 12
	','            reduce using rule 12
	type           reduce using rule 12
	'|'            reduce using rule 12
	identifier     reduce using rule 12
	'>'            reduce using rule 12
	%eof           reduce using rule 12


State 8

	T0 -> bool .                                        (rule 13)

	atom           reduce using rule 13
	bool           reduce using rule 13
	int            reduce using rule 13
	float          reduce using rule 13
	char           reduce using rule 13
	string         reduce using rule 13
	unit           reduce using rule 13
	void           reduce using rule 13
	vector         reduce using rule 13
	'{'            reduce using rule 13
	'}'            reduce using rule 13
	'('            reduce using rule 13
	','            reduce using rule 13
	type           reduce using rule 13
	'|'            reduce using rule 13
	identifier     reduce using rule 13
	'>'            reduce using rule 13
	%eof           reduce using rule 13


State 9

	T0 -> int .                                         (rule 14)

	atom           reduce using rule 14
	bool           reduce using rule 14
	int            reduce using rule 14
	float          reduce using rule 14
	char           reduce using rule 14
	string         reduce using rule 14
	unit           reduce using rule 14
	void           reduce using rule 14
	vector         reduce using rule 14
	'{'            reduce using rule 14
	'}'            reduce using rule 14
	'('            reduce using rule 14
	','            reduce using rule 14
	type           reduce using rule 14
	'|'            reduce using rule 14
	identifier     reduce using rule 14
	'>'            reduce using rule 14
	%eof           reduce using rule 14


State 10

	T0 -> float .                                       (rule 15)

	atom           reduce using rule 15
	bool           reduce using rule 15
	int            reduce using rule 15
	float          reduce using rule 15
	char           reduce using rule 15
	string         reduce using rule 15
	unit           reduce using rule 15
	void           reduce using rule 15
	vector         reduce using rule 15
	'{'            reduce using rule 15
	'}'            reduce using rule 15
	'('            reduce using rule 15
	','            reduce using rule 15
	type           reduce using rule 15
	'|'            reduce using rule 15
	identifier     reduce using rule 15
	'>'            reduce using rule 15
	%eof           reduce using rule 15


State 11

	T0 -> char .                                        (rule 16)

	atom           reduce using rule 16
	bool           reduce using rule 16
	int            reduce using rule 16
	float          reduce using rule 16
	char           reduce using rule 16
	string         reduce using rule 16
	unit           reduce using rule 16
	void           reduce using rule 16
	vector         reduce using rule 16
	'{'            reduce using rule 16
	'}'            reduce using rule 16
	'('            reduce using rule 16
	','            reduce using rule 16
	type           reduce using rule 16
	'|'            reduce using rule 16
	identifier     reduce using rule 16
	'>'            reduce using rule 16
	%eof           reduce using rule 16


State 12

	T0 -> string .                                      (rule 17)

	atom           reduce using rule 17
	bool           reduce using rule 17
	int            reduce using rule 17
	float          reduce using rule 17
	char           reduce using rule 17
	string         reduce using rule 17
	unit           reduce using rule 17
	void           reduce using rule 17
	vector         reduce using rule 17
	'{'            reduce using rule 17
	'}'            reduce using rule 17
	'('            reduce using rule 17
	','            reduce using rule 17
	type           reduce using rule 17
	'|'            reduce using rule 17
	identifier     reduce using rule 17
	'>'            reduce using rule 17
	%eof           reduce using rule 17


State 13

	T0 -> unit .                                        (rule 18)

	atom           reduce using rule 18
	bool           reduce using rule 18
	int            reduce using rule 18
	float          reduce using rule 18
	char           reduce using rule 18
	string         reduce using rule 18
	unit           reduce using rule 18
	void           reduce using rule 18
	vector         reduce using rule 18
	'{'            reduce using rule 18
	'}'            reduce using rule 18
	'('            reduce using rule 18
	','            reduce using rule 18
	type           reduce using rule 18
	'|'            reduce using rule 18
	identifier     reduce using rule 18
	'>'            reduce using rule 18
	%eof           reduce using rule 18


State 14

	T0 -> void .                                        (rule 19)

	atom           reduce using rule 19
	bool           reduce using rule 19
	int            reduce using rule 19
	float          reduce using rule 19
	char           reduce using rule 19
	string         reduce using rule 19
	unit           reduce using rule 19
	void           reduce using rule 19
	vector         reduce using rule 19
	'{'            reduce using rule 19
	'}'            reduce using rule 19
	'('            reduce using rule 19
	','            reduce using rule 19
	type           reduce using rule 19
	'|'            reduce using rule 19
	identifier     reduce using rule 19
	'>'            reduce using rule 19
	%eof           reduce using rule 19


State 15

	T0 -> vector . '<' T '>'                            (rule 20)

	'<'            shift, and enter state 22


State 16

	T0 -> '{' . records '}'                             (rule 22)

	identifier     shift, and enter state 21

	records        goto state 20

State 17

	definition -> type . identifier ':=' T              (rule 85)

	identifier     shift, and enter state 19


State 18

	T0 -> identifier .                                  (rule 21)

	atom           reduce using rule 21
	bool           reduce using rule 21
	int            reduce using rule 21
	float          reduce using rule 21
	char           reduce using rule 21
	string         reduce using rule 21
	unit           reduce using rule 21
	void           reduce using rule 21
	vector         reduce using rule 21
	'{'            reduce using rule 21
	'}'            reduce using rule 21
	'('            reduce using rule 21
	','            reduce using rule 21
	type           reduce using rule 21
	'|'            reduce using rule 21
	identifier     reduce using rule 21
	'>'            reduce using rule 21
	%eof           reduce using rule 21


State 19

	definition -> type identifier . ':=' T              (rule 85)

	':='           shift, and enter state 71


State 20

	T0 -> '{' records . '}'                             (rule 22)

	'}'            shift, and enter state 70


State 21

	records -> identifier . ':' T mRecords              (rule 9)

	':'            shift, and enter state 69


State 22

	T0 -> vector '<' . T '>'                            (rule 20)

	atom           shift, and enter state 7
	bool           shift, and enter state 8
	int            shift, and enter state 9
	float          shift, and enter state 10
	char           shift, and enter state 11
	string         shift, and enter state 12
	unit           shift, and enter state 13
	void           shift, and enter state 14
	vector         shift, and enter state 15
	'{'            shift, and enter state 16
	identifier     shift, and enter state 18

	T0             goto state 3
	T              goto state 68

State 23

	definitions -> definitions definition .             (rule 86)

	atom           reduce using rule 86
	bool           reduce using rule 86
	int            reduce using rule 86
	float          reduce using rule 86
	char           reduce using rule 86
	string         reduce using rule 86
	unit           reduce using rule 86
	void           reduce using rule 86
	vector         reduce using rule 86
	'{'            reduce using rule 86
	type           reduce using rule 86
	identifier     reduce using rule 86
	%eof           reduce using rule 86


State 24

	T -> T '|' . T0                                     (rule 24)

	atom           shift, and enter state 7
	bool           shift, and enter state 8
	int            shift, and enter state 9
	float          shift, and enter state 10
	char           shift, and enter state 11
	string         shift, and enter state 12
	unit           shift, and enter state 13
	void           shift, and enter state 14
	vector         shift, and enter state 15
	'{'            shift, and enter state 16
	identifier     shift, and enter state 18

	T0             goto state 67

State 25

	definition -> T identifier . '(' m_fun_params ')' '{' actions '}'    (rule 84)

	'('            shift, and enter state 66


State 26

	e -> lvaluable .                                    (rule 53)

	']'            reduce using rule 53
	')'            reduce using rule 53
	','            reduce using rule 53
	with           reduce using rule 53
	';'            reduce using rule 53
	'+'            reduce using rule 53
	'-'            reduce using rule 53
	'*'            reduce using rule 53
	'/'            reduce using rule 53
	'^'            reduce using rule 53
	'%'            reduce using rule 53
	'<'            reduce using rule 53
	'>'            reduce using rule 53
	'!='           reduce using rule 53
	'=='           reduce using rule 53
	'>='           reduce using rule 53
	'<='           reduce using rule 53
	'||'           reduce using rule 53
	'&&'           reduce using rule 53


State 27

	ixs -> '[' e . ']'                                  (rule 1)
	e -> e . '+' e                                      (rule 57)
	e -> e . '*' e                                      (rule 58)
	e -> e . '/' e                                      (rule 59)
	e -> e . '^' e                                      (rule 60)
	e -> e . '%' e                                      (rule 61)
	e -> e . '-' e                                      (rule 62)
	e -> e . '<' e                                      (rule 63)
	e -> e . '>' e                                      (rule 64)
	e -> e . '!=' e                                     (rule 65)
	e -> e . '==' e                                     (rule 66)
	e -> e . '>=' e                                     (rule 67)
	e -> e . '<=' e                                     (rule 68)
	e -> e . '||' e                                     (rule 69)
	e -> e . '&&' e                                     (rule 70)

	']'            shift, and enter state 51
	'+'            shift, and enter state 52
	'-'            shift, and enter state 53
	'*'            shift, and enter state 54
	'/'            shift, and enter state 55
	'^'            shift, and enter state 56
	'%'            shift, and enter state 57
	'<'            shift, and enter state 58
	'>'            shift, and enter state 59
	'!='           shift, and enter state 60
	'=='           shift, and enter state 61
	'>='           shift, and enter state 62
	'<='           shift, and enter state 63
	'||'           shift, and enter state 64
	'&&'           shift, and enter state 65


State 28

	e -> charlit .                                      (rule 76)

	']'            reduce using rule 76
	')'            reduce using rule 76
	','            reduce using rule 76
	with           reduce using rule 76
	';'            reduce using rule 76
	'+'            reduce using rule 76
	'-'            reduce using rule 76
	'*'            reduce using rule 76
	'/'            reduce using rule 76
	'^'            reduce using rule 76
	'%'            reduce using rule 76
	'<'            reduce using rule 76
	'>'            reduce using rule 76
	'!='           reduce using rule 76
	'=='           reduce using rule 76
	'>='           reduce using rule 76
	'<='           reduce using rule 76
	'||'           reduce using rule 76
	'&&'           reduce using rule 76


State 29

	e -> stringlit .                                    (rule 75)

	']'            reduce using rule 75
	')'            reduce using rule 75
	','            reduce using rule 75
	with           reduce using rule 75
	';'            reduce using rule 75
	'+'            reduce using rule 75
	'-'            reduce using rule 75
	'*'            reduce using rule 75
	'/'            reduce using rule 75
	'^'            reduce using rule 75
	'%'            reduce using rule 75
	'<'            reduce using rule 75
	'>'            reduce using rule 75
	'!='           reduce using rule 75
	'=='           reduce using rule 75
	'>='           reduce using rule 75
	'<='           reduce using rule 75
	'||'           reduce using rule 75
	'&&'           reduce using rule 75


State 30

	e -> boollit .                                      (rule 77)

	']'            reduce using rule 77
	')'            reduce using rule 77
	','            reduce using rule 77
	with           reduce using rule 77
	';'            reduce using rule 77
	'+'            reduce using rule 77
	'-'            reduce using rule 77
	'*'            reduce using rule 77
	'/'            reduce using rule 77
	'^'            reduce using rule 77
	'%'            reduce using rule 77
	'<'            reduce using rule 77
	'>'            reduce using rule 77
	'!='           reduce using rule 77
	'=='           reduce using rule 77
	'>='           reduce using rule 77
	'<='           reduce using rule 77
	'||'           reduce using rule 77
	'&&'           reduce using rule 77


State 31

	e -> number .                                       (rule 74)

	']'            reduce using rule 74
	')'            reduce using rule 74
	','            reduce using rule 74
	with           reduce using rule 74
	';'            reduce using rule 74
	'+'            reduce using rule 74
	'-'            reduce using rule 74
	'*'            reduce using rule 74
	'/'            reduce using rule 74
	'^'            reduce using rule 74
	'%'            reduce using rule 74
	'<'            reduce using rule 74
	'>'            reduce using rule 74
	'!='           reduce using rule 74
	'=='           reduce using rule 74
	'>='           reduce using rule 74
	'<='           reduce using rule 74
	'||'           reduce using rule 74
	'&&'           reduce using rule 74


State 32

	e -> '[' . args ']'                                 (rule 73)

	charlit        shift, and enter state 28
	stringlit      shift, and enter state 29
	boollit        shift, and enter state 30
	number         shift, and enter state 31
	'['            shift, and enter state 32
	']'            reduce using rule 8
	'('            shift, and enter state 33
	','            reduce using rule 8
	match          shift, and enter state 34
	new            shift, and enter state 35
	identifier     shift, and enter state 36
	'-'            shift, and enter state 37
	'~'            shift, and enter state 38
	'&'            shift, and enter state 39

	lvaluable      goto state 26
	args           goto state 49
	e              goto state 50

State 33

	e -> '(' . e ')'                                    (rule 72)

	charlit        shift, and enter state 28
	stringlit      shift, and enter state 29
	boollit        shift, and enter state 30
	number         shift, and enter state 31
	'['            shift, and enter state 32
	'('            shift, and enter state 33
	match          shift, and enter state 34
	new            shift, and enter state 35
	identifier     shift, and enter state 36
	'-'            shift, and enter state 37
	'~'            shift, and enter state 38
	'&'            shift, and enter state 39

	lvaluable      goto state 26
	e              goto state 48

State 34

	e -> match . e with patterns                        (rule 78)

	charlit        shift, and enter state 28
	stringlit      shift, and enter state 29
	boollit        shift, and enter state 30
	number         shift, and enter state 31
	'['            shift, and enter state 32
	'('            shift, and enter state 33
	match          shift, and enter state 34
	new            shift, and enter state 35
	identifier     shift, and enter state 36
	'-'            shift, and enter state 37
	'~'            shift, and enter state 38
	'&'            shift, and enter state 39

	lvaluable      goto state 26
	e              goto state 47

State 35

	e -> new . T '(' args ')'                           (rule 54)

	atom           shift, and enter state 7
	bool           shift, and enter state 8
	int            shift, and enter state 9
	float          shift, and enter state 10
	char           shift, and enter state 11
	string         shift, and enter state 12
	unit           shift, and enter state 13
	void           shift, and enter state 14
	vector         shift, and enter state 15
	'{'            shift, and enter state 16
	identifier     shift, and enter state 18

	T0             goto state 3
	T              goto state 46

State 36

	lvaluable -> identifier . ixs                       (rule 3)
	lvaluable -> identifier . '.' lvaluable             (rule 4)
	lvaluable -> identifier .                           (rule 5)
	e -> identifier . '(' args ')'                      (rule 79)

	'['            shift, and enter state 2
	']'            reduce using rule 5
	'('            shift, and enter state 44
	')'            reduce using rule 5
	','            reduce using rule 5
	with           reduce using rule 5
	';'            reduce using rule 5
	'.'            shift, and enter state 45
	'+'            reduce using rule 5
	'-'            reduce using rule 5
	'*'            reduce using rule 5
	'/'            reduce using rule 5
	'^'            reduce using rule 5
	'%'            reduce using rule 5
	'<'            reduce using rule 5
	'>'            reduce using rule 5
	'!='           reduce using rule 5
	'=='           reduce using rule 5
	'>='           reduce using rule 5
	'<='           reduce using rule 5
	'||'           reduce using rule 5
	'&&'           reduce using rule 5

	ixs            goto state 43

State 37

	e -> '-' . e                                        (rule 56)

	charlit        shift, and enter state 28
	stringlit      shift, and enter state 29
	boollit        shift, and enter state 30
	number         shift, and enter state 31
	'['            shift, and enter state 32
	'('            shift, and enter state 33
	match          shift, and enter state 34
	new            shift, and enter state 35
	identifier     shift, and enter state 36
	'-'            shift, and enter state 37
	'~'            shift, and enter state 38
	'&'            shift, and enter state 39

	lvaluable      goto state 26
	e              goto state 42

State 38

	e -> '~' . e                                        (rule 71)

	charlit        shift, and enter state 28
	stringlit      shift, and enter state 29
	boollit        shift, and enter state 30
	number         shift, and enter state 31
	'['            shift, and enter state 32
	'('            shift, and enter state 33
	match          shift, and enter state 34
	new            shift, and enter state 35
	identifier     shift, and enter state 36
	'-'            shift, and enter state 37
	'~'            shift, and enter state 38
	'&'            shift, and enter state 39

	lvaluable      goto state 26
	e              goto state 41

State 39

	e -> '&' . e                                        (rule 55)

	charlit        shift, and enter state 28
	stringlit      shift, and enter state 29
	boollit        shift, and enter state 30
	number         shift, and enter state 31
	'['            shift, and enter state 32
	'('            shift, and enter state 33
	match          shift, and enter state 34
	new            shift, and enter state 35
	identifier     shift, and enter state 36
	'-'            shift, and enter state 37
	'~'            shift, and enter state 38
	'&'            shift, and enter state 39

	lvaluable      goto state 26
	e              goto state 40

State 40

	e -> '&' e .                                        (rule 55)
	e -> e . '+' e                                      (rule 57)
	e -> e . '*' e                                      (rule 58)
	e -> e . '/' e                                      (rule 59)
	e -> e . '^' e                                      (rule 60)
	e -> e . '%' e                                      (rule 61)
	e -> e . '-' e                                      (rule 62)
	e -> e . '<' e                                      (rule 63)
	e -> e . '>' e                                      (rule 64)
	e -> e . '!=' e                                     (rule 65)
	e -> e . '==' e                                     (rule 66)
	e -> e . '>=' e                                     (rule 67)
	e -> e . '<=' e                                     (rule 68)
	e -> e . '||' e                                     (rule 69)
	e -> e . '&&' e                                     (rule 70)

	']'            reduce using rule 55
	')'            reduce using rule 55
	','            reduce using rule 55
	with           reduce using rule 55
	';'            reduce using rule 55
	'+'            reduce using rule 55
	'-'            reduce using rule 55
	'*'            reduce using rule 55
	'/'            reduce using rule 55
	'^'            reduce using rule 55
	'%'            reduce using rule 55
	'<'            reduce using rule 55
	'>'            reduce using rule 55
	'!='           reduce using rule 55
	'=='           reduce using rule 55
	'>='           reduce using rule 55
	'<='           reduce using rule 55
	'||'           reduce using rule 55
	'&&'           reduce using rule 55


State 41

	e -> e . '+' e                                      (rule 57)
	e -> e . '*' e                                      (rule 58)
	e -> e . '/' e                                      (rule 59)
	e -> e . '^' e                                      (rule 60)
	e -> e . '%' e                                      (rule 61)
	e -> e . '-' e                                      (rule 62)
	e -> e . '<' e                                      (rule 63)
	e -> e . '>' e                                      (rule 64)
	e -> e . '!=' e                                     (rule 65)
	e -> e . '==' e                                     (rule 66)
	e -> e . '>=' e                                     (rule 67)
	e -> e . '<=' e                                     (rule 68)
	e -> e . '||' e                                     (rule 69)
	e -> e . '&&' e                                     (rule 70)
	e -> '~' e .                                        (rule 71)

	']'            reduce using rule 71
	')'            reduce using rule 71
	','            reduce using rule 71
	with           reduce using rule 71
	';'            reduce using rule 71
	'+'            reduce using rule 71
	'-'            reduce using rule 71
	'*'            reduce using rule 71
	'/'            reduce using rule 71
	'^'            reduce using rule 71
	'%'            reduce using rule 71
	'<'            reduce using rule 71
	'>'            reduce using rule 71
	'!='           reduce using rule 71
	'=='           reduce using rule 71
	'>='           reduce using rule 71
	'<='           reduce using rule 71
	'||'           reduce using rule 71
	'&&'           reduce using rule 71


State 42

	e -> '-' e .                                        (rule 56)
	e -> e . '+' e                                      (rule 57)
	e -> e . '*' e                                      (rule 58)
	e -> e . '/' e                                      (rule 59)
	e -> e . '^' e                                      (rule 60)
	e -> e . '%' e                                      (rule 61)
	e -> e . '-' e                                      (rule 62)
	e -> e . '<' e                                      (rule 63)
	e -> e . '>' e                                      (rule 64)
	e -> e . '!=' e                                     (rule 65)
	e -> e . '==' e                                     (rule 66)
	e -> e . '>=' e                                     (rule 67)
	e -> e . '<=' e                                     (rule 68)
	e -> e . '||' e                                     (rule 69)
	e -> e . '&&' e                                     (rule 70)

	']'            reduce using rule 56
	')'            reduce using rule 56
	','            reduce using rule 56
	with           reduce using rule 56
	';'            reduce using rule 56
	'+'            reduce using rule 56
	'-'            reduce using rule 56
	'*'            reduce using rule 56
	'/'            reduce using rule 56
	'^'            reduce using rule 56
	'%'            reduce using rule 56
	'<'            reduce using rule 56
	'>'            reduce using rule 56
	'!='           reduce using rule 56
	'=='           reduce using rule 56
	'>='           reduce using rule 56
	'<='           reduce using rule 56
	'||'           reduce using rule 56
	'&&'           reduce using rule 56


State 43

	ixs -> ixs . '[' e ']'                              (rule 2)
	lvaluable -> identifier ixs .                       (rule 3)

	'['            shift, and enter state 100
	']'            reduce using rule 3
	')'            reduce using rule 3
	','            reduce using rule 3
	':='           reduce using rule 3
	with           reduce using rule 3
	';'            reduce using rule 3
	'+'            reduce using rule 3
	'-'            reduce using rule 3
	'*'            reduce using rule 3
	'/'            reduce using rule 3
	'^'            reduce using rule 3
	'%'            reduce using rule 3
	'<'            reduce using rule 3
	'>'            reduce using rule 3
	'!='           reduce using rule 3
	'=='           reduce using rule 3
	'>='           reduce using rule 3
	'<='           reduce using rule 3
	'||'           reduce using rule 3
	'&&'           reduce using rule 3


State 44

	e -> identifier '(' . args ')'                      (rule 79)

	charlit        shift, and enter state 28
	stringlit      shift, and enter state 29
	boollit        shift, and enter state 30
	number         shift, and enter state 31
	'['            shift, and enter state 32
	'('            shift, and enter state 33
	')'            reduce using rule 8
	','            reduce using rule 8
	match          shift, and enter state 34
	new            shift, and enter state 35
	identifier     shift, and enter state 36
	'-'            shift, and enter state 37
	'~'            shift, and enter state 38
	'&'            shift, and enter state 39

	lvaluable      goto state 26
	args           goto state 99
	e              goto state 50

State 45

	lvaluable -> identifier '.' . lvaluable             (rule 4)

	identifier     shift, and enter state 98

	lvaluable      goto state 97

State 46

	T -> T . '|' T0                                     (rule 24)
	e -> new T . '(' args ')'                           (rule 54)

	'('            shift, and enter state 96
	'|'            shift, and enter state 24


State 47

	e -> e . '+' e                                      (rule 57)
	e -> e . '*' e                                      (rule 58)
	e -> e . '/' e                                      (rule 59)
	e -> e . '^' e                                      (rule 60)
	e -> e . '%' e                                      (rule 61)
	e -> e . '-' e                                      (rule 62)
	e -> e . '<' e                                      (rule 63)
	e -> e . '>' e                                      (rule 64)
	e -> e . '!=' e                                     (rule 65)
	e -> e . '==' e                                     (rule 66)
	e -> e . '>=' e                                     (rule 67)
	e -> e . '<=' e                                     (rule 68)
	e -> e . '||' e                                     (rule 69)
	e -> e . '&&' e                                     (rule 70)
	e -> match e . with patterns                        (rule 78)

	with           shift, and enter state 95
	'+'            shift, and enter state 52
	'-'            shift, and enter state 53
	'*'            shift, and enter state 54
	'/'            shift, and enter state 55
	'^'            shift, and enter state 56
	'%'            shift, and enter state 57
	'<'            shift, and enter state 58
	'>'            shift, and enter state 59
	'!='           shift, and enter state 60
	'=='           shift, and enter state 61
	'>='           shift, and enter state 62
	'<='           shift, and enter state 63
	'||'           shift, and enter state 64
	'&&'           shift, and enter state 65


State 48

	e -> e . '+' e                                      (rule 57)
	e -> e . '*' e                                      (rule 58)
	e -> e . '/' e                                      (rule 59)
	e -> e . '^' e                                      (rule 60)
	e -> e . '%' e                                      (rule 61)
	e -> e . '-' e                                      (rule 62)
	e -> e . '<' e                                      (rule 63)
	e -> e . '>' e                                      (rule 64)
	e -> e . '!=' e                                     (rule 65)
	e -> e . '==' e                                     (rule 66)
	e -> e . '>=' e                                     (rule 67)
	e -> e . '<=' e                                     (rule 68)
	e -> e . '||' e                                     (rule 69)
	e -> e . '&&' e                                     (rule 70)
	e -> '(' e . ')'                                    (rule 72)
